# ai_journal

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Tiltfile  docker-compose.yaml  package-lock.json
.github/workflows/: python-app.yml  ruff.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_flow.md  ingest_data.ipynb  pyproject.toml  requirements.txt  server.py
backend/ai_journal/: prompts.py  server.py  storage.py  text.py
backend/data/: 50_best_journalling_prompts.txt
backend/notebooks/: dspy_playground.ipynb  dspy_test.ipynb  journalling_flow_demo.ipynb  simple_RAG.ipynb  upload_journal_chunks.ipynb
backend/scripts/: embed_user_entries.py  upload_embedded_text_chunks_from_txt_files_to_weaviate.py
backend/src/ai_journal/: __init__.py  lm.py  prompts.py  server.py  storage.py  therapy.py
backend/src/user_data/: 2024-10-13-17-20-56.md
backend/test/: conftest.py  test_server.py  test_storage.py  test_therapy.py
deployment/: docker-compose.yaml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/my-app/: package-lock.json
frontend/src/routes/: +page.svelte  InsightSearch.svelte  JournallingEntry.svelte  Timer.svelte
