[tool.poetry]
name = "ai-journal"
version = "0.1.0"
description = ""
authors = ["Luan van Pletsen <luanvanpletsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.16.2"
notion-haystack = "^1.0.0"
haystack = "^0.42"
ipykernel = "^6.29.4"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pre-commit = "^3.7.0"
dspy-ai = "^2.4.5"
poetry-plugin-export = "^1.7.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
