[project]
name = "ai-journal"
version = "0.0.1"
description = ""
authors = [
    {name = "Luan van Pletsen", email = "luanvanpletsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai>=1.16.2",
    "notion-haystack>=1.0.0",
    "haystack>=0.42",
    "ipykernel>=6.29.4",
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "pre-commit>=3.7.0",
    "dspy-ai>=2.4.5",
    "langchain>=0.2.1",
    "langchain-community>=0.2.1",
    "weaviate-client==4.6.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_journal"]